--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "url": "qr-generator"
   },
   "author": "Joaquin Vilchez",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "md5": "^2.3.0",
+    "qrcode": "^1.5.0"
+  }
 }
